<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:padding="@dimen/spacing_medium">

  <TextView
    android:id="@+id/new_event_title"
    android:layout_width="0dp"
    android:layout_height="@dimen/base_item_height"
    android:gravity="center"
    android:textSize="@dimen/textSize_medium"
    android:textStyle="bold|italic"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    android:text="@string/new_event_title"/>


  <TextView
    android:id="@+id/new_event_name_title"
    android:layout_width="@dimen/base_item_title_width"
    android:layout_height="@dimen/base_item_height"
    android:layout_marginTop="@dimen/spacing_jumbo"
    app:layout_constraintTop_toBottomOf="@id/new_event_title"
    app:layout_constraintLeft_toLeftOf="parent"
    android:textSize="@dimen/textSize_small"
    android:textStyle="bold|italic|italic"
    android:text="@string/item_event_medication_name"/>

  <Spinner
    android:id="@+id/new_event_name"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/base_item_height"
    app:layout_constraintTop_toTopOf="@+id/new_event_name_title"
    app:layout_constraintLeft_toRightOf="@+id/new_event_name_title"
    android:entries="@array/medication_names"
    android:textSize="@dimen/textSize_small"/>


  <TextView
    android:id="@+id/new_event_type_title"
    android:layout_width="@dimen/base_item_title_width"
    android:layout_height="@dimen/base_item_height"
    android:layout_marginTop="@dimen/spacing_medium"
    app:layout_constraintTop_toBottomOf="@id/new_event_name_title"
    app:layout_constraintLeft_toLeftOf="parent"
    android:textSize="@dimen/textSize_small"
    android:textStyle="bold|italic|italic"
    android:text="@string/item_event_medication_type"/>

  <TextView
    android:id="@+id/new_event_type"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/base_item_height"
    android:paddingLeft="@dimen/spacing_small"
    app:layout_constraintTop_toTopOf="@+id/new_event_type_title"
    app:layout_constraintLeft_toRightOf="@+id/new_event_type_title"
    android:textSize="@dimen/textSize_small"
    android:textColor="@color/black"
    android:text="controller"
    tools:text="controller"/>


  <TextView
    android:id="@+id/new_event_timestamp_title"
    android:layout_width="@dimen/base_item_title_width"
    android:layout_height="@dimen/base_item_height"
    android:layout_marginTop="@dimen/spacing_medium"
    app:layout_constraintTop_toBottomOf="@+id/new_event_type_title"
    app:layout_constraintLeft_toLeftOf="parent"
    android:textSize="@dimen/textSize_small"
    android:textStyle="bold|italic|italic"
    android:text="@string/item_event_timestamp"/>

  <TextView
    android:id="@+id/new_event_timestamp_date"
    android:layout_width="120dp"
    android:layout_height="@dimen/base_btn_height"
    app:layout_constraintLeft_toRightOf="@+id/new_event_timestamp_title"
    app:layout_constraintTop_toTopOf="@+id/new_event_timestamp_title"
    android:textSize="@dimen/textSize_small"
    android:textColor="@color/black"
    android:background="?attr/selectableItemBackground"
    android:text="@string/new_event_set_date"
    tools:text="Wed, Jan 27, 2016"/>

  <TextView
    android:id="@+id/new_event_timestamp_time"
    android:layout_width="50dp"
    android:layout_height="@dimen/base_btn_height"
    android:gravity="center_horizontal"
    android:layout_marginLeft="@dimen/spacing_micro"
    app:layout_constraintLeft_toRightOf="@+id/new_event_timestamp_date"
    app:layout_constraintTop_toTopOf="@+id/new_event_timestamp_title"
    android:textSize="@dimen/textSize_small"
    android:textColor="@color/black"
    android:background="?attr/selectableItemBackground"
    android:text="@string/new_event_set_time"
    tools:text="6:00"/>


  <TextView
    android:id="@+id/new_event_save_btn"
    android:layout_width="@dimen/base_btn_width"
    android:layout_height="@dimen/base_btn_height"
    android:background="?attr/selectableItemBackground"
    android:layout_marginTop="@dimen/spacing_jumbo"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/new_event_timestamp_title"
    android:gravity="center"
    android:text="@string/new_event_save_btn"/>

  <TextView
    android:id="@+id/new_event_cancel_btn"
    android:layout_width="@dimen/base_btn_width"
    android:layout_height="@dimen/base_btn_height"
    android:background="?attr/selectableItemBackground"
    app:layout_constraintTop_toTopOf="@+id/new_event_save_btn"
    app:layout_constraintRight_toLeftOf="@+id/new_event_save_btn"
    android:layout_marginRight="@dimen/spacing_medium"
    android:gravity="center"
    android:text="@string/new_event_cancel_btn"/>

</android.support.constraint.ConstraintLayout>